TWI-28 feat: add methods blockuser,unblockuser,getallblock,getallunblock
