# internal/server/server.go
@@ -52,6 +52,18 @@ func Server() error {
 	r.HandleFunc("/v1/tweets/{id_tweet}/unlike", func(w http.ResponseWriter, r *http.Request) {
 		Serviceuser.AuthHandler(http.HandlerFunc(Tweets.UnlikeTweet)).ServeHTTP(w, r)
 	}).Methods(http.MethodDelete)
+	r.HandleFunc("/v1/users/{id_user}/block", func(w http.ResponseWriter, r *http.Request) {
+		Serviceuser.AuthHandler(http.HandlerFunc(admin.BlockUser)).ServeHTTP(w, r)
+	}).Methods(http.MethodPatch)
+	r.HandleFunc("/v1/users/{id_user}/unblock", func(w http.ResponseWriter, r *http.Request) {
+		Serviceuser.AuthHandler(http.HandlerFunc(admin.UnblockUser)).ServeHTTP(w, r)
+	}).Methods(http.MethodPatch)
+	r.HandleFunc("/v1/users/get_unblock", func(w http.ResponseWriter, r *http.Request) {
+		Serviceuser.AuthHandler(http.HandlerFunc(admin.GetAllUnblockUsers)).ServeHTTP(w, r)
+	}).Methods(http.MethodGet)
+	r.HandleFunc("/v1/users/get_block", func(w http.ResponseWriter, r *http.Request) {
+		Serviceuser.AuthHandler(http.HandlerFunc(admin.GetAllBlockUsers)).ServeHTTP(w, r)
+	}).Methods(http.MethodGet)
 	r.Methods(http.MethodOptions).HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		w.Header().Set("Access-Control-Allow-Origin", "*")
 		w.Header().Set("Access-Control-Allow-Methods", "*")
